# src/app/Process/processSwagger.yaml
@@ -221,14 +221,96 @@ tags:
           schema:
             type: object
             required:
-              - routineIdx
+              - originRoutineIdx
               - totalExerciseTime
+              - routineDetails
             properties:
+              'originRoutineIdx':
+                type: integer
+                description: 추천 받았던 routineIdx 값을 입력해주세요.
               'totalExerciseTime':
                 type: integer
                 description: "총 운동 시간을 초 단위로 써주세요."
               'routineDetails':
-                type: integer
+                type: array
+                items:
+                  properties:
+                    type: object
+                    required:
+                      - order
+                      - exerciseInfo
+                      - totalSets
+                      - rep
+                      - weight
+                      - predictTime
+                      - predictCalories
+                      - exerciseWeight
+                      - predictDist
+                      - rest
+                      - sets
+                    properties:
+                      'order':
+                        type: integer
+                        example: 1
+                      'exerciseInfo':
+                        type: object
+                        required:
+                          - healthCategoryIdx
+                          - exerciseName
+                          - parts
+                          - muscle
+                          - equipment
+                          - caution
+                          - distance
+                        properties:
+                          healthCategoryIdx:
+                            type: integer
+                          exerciseName:
+                            type: string
+                          parts:
+                            type: string
+                          muscle:
+                            type: string
+                          equipment:
+                            type: string
+                          caution:
+                            type: array
+                            items:
+                              type: string
+                          distance:
+                            type: integer
+                      totalSets:
+                        type: integer
+                      rep:
+                        type: integer
+                      weight:
+                        type: integer
+                      predictTime:
+                        type: integer
+                      predictCalories:
+                        type: integer
+                      exerciseWeight:
+                        type: integer
+                      predictDist:
+                        type: integer
+                      rest:
+                        type: integer
+                      sets:
+                        type: array      
+                        items:
+                          type: object
+                          required:
+                            - set
+                            - rep
+                            - weight
+                          properties:
+                            set:
+                              type: integer
+                            rep:
+                              type: integer
+                            weight:
+                              type: integer
+
     responses:
       '1000':
         description: "성공! myCalendar에 기록되었습니다."
